--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.5",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.1",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "vercel": "^35.0.3"
   }
 }
