--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "weatherapp-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon index.ts",
+    "start": "node index.ts"
   },
   "author": "",
   "license": "ISC",
